Trying to fix buidl bugs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recipe-club",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
@@ -28,6 +29,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://recipeclub.netlify.com/"
+  }
 }
