--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://recipeclub.netlify.com",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
